# Latte

./: .travis.yml  README.md  index.html  params.json  requirements.txt  setup.py
doc/config/: config
latte/: Analyzer.py  Config.py  TimeTracker.py  UserActivityTracker.py  latte.py
latte/x11_extension/: Cargo.toml
latte/x11_extension/src/: lib.rs
tests/: analyzer_test.py  config_test.py
